Resolve "Add full name of authors and designers when create and update training definition"